@@ -10,12 +10,10 @@ package org.sosy_lab.cpachecker.cmdline;
 
 import static com.google.common.base.Preconditions.checkArgument;
 import static com.google.common.collect.FluentIterable.from;
-import static java.util.stream.Collectors.toList;
 import static org.sosy_lab.common.collect.Collections3.transformedImmutableSetCopy;
 import static org.sosy_lab.common.io.DuplicateOutputStream.mergeStreams;
 
 import com.google.common.annotations.VisibleForTesting;
-import com.google.common.base.Joiner;
 import com.google.common.base.Preconditions;
 import com.google.common.base.Splitter;
 import com.google.common.collect.ImmutableList;
@@ -574,7 +572,7 @@ public class CPAMain {
             .splitToList(cmdLineOptions.getOrDefault(SPECIFICATION_OPTION, ""));
 
     List<String> propertyFiles =
-        specificationFiles.stream().filter(file -> file.endsWith(".prp")).collect(toList());
+        from(specificationFiles).filter(file -> file.endsWith(".prp")).toList();
     if (propertyFiles.isEmpty()) {
       return ImmutableSet.of();
     }
@@ -654,6 +652,12 @@ public class CPAMain {
     )
     @FileOption(Type.OPTIONAL_INPUT_FILE)
     private @Nullable Path correctnessWitnessValidationConfig = null;
+
+    @Option(
+        secure = true,
+        name = "witness.validation.correctness.isa",
+        description = "Use correctness witness as invariants specification automaton (ISA).")
+    private boolean validateInvariantsSpecificationAutomaton = false;
   }
 
   private static Configuration handleWitnessOptions(
@@ -670,15 +674,16 @@ public class CPAMain {
     switch (witnessType) {
       case VIOLATION_WITNESS:
         validationConfigFile = options.violationWitnessValidationConfig;
-        String specs = overrideOptions.get(SPECIFICATION_OPTION);
-        String witnessSpec = options.witness.toString();
-        specs = specs == null ? witnessSpec : Joiner.on(',').join(specs, witnessSpec);
-        overrideOptions.put(SPECIFICATION_OPTION, specs);
+        appendWitnessToSpecificationOption(options, overrideOptions);
         break;
       case CORRECTNESS_WITNESS:
         validationConfigFile = options.correctnessWitnessValidationConfig;
+        if (options.validateInvariantsSpecificationAutomaton) {
+          appendWitnessToSpecificationOption(options, overrideOptions);
+        } else {
         overrideOptions.put(
             "invariantGeneration.kInduction.invariantsAutomatonFile", options.witness.toString());
+        }
         break;
       default:
         throw new InvalidConfigurationException(
@@ -704,7 +709,15 @@ public class CPAMain {
     return configBuilder.build();
   }
 
-  @SuppressWarnings("resource")
+  private static void appendWitnessToSpecificationOption(
+      WitnessOptions pOptions, Map<String, String> pOverrideOptions) {
+    String specs = pOverrideOptions.get(SPECIFICATION_OPTION);
+    String witnessSpec = pOptions.witness.toString();
+    specs = specs == null ? witnessSpec : (specs + "," + witnessSpec.toString());
+    pOverrideOptions.put(SPECIFICATION_OPTION, specs);
+  }
+
+  @SuppressWarnings("deprecation")
   private static void printResultAndStatistics(
       CPAcheckerResult mResult,
       String outputDirectory,
